cleanup complete now to refactor

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -7,35 +7,13 @@
       <blockquote>
         <h2>
           Hi, I'm Seosamh. <span class="muted">I developed 100 Motels. </span>
-          <small><cite>100 Motels has just launched, more extensive documentation on the way!</cite></small>
+          <small><cite></cite></small>
         </h2>
       </blockquote>
     </div>
   </div>
   <div class="row">
-    <div class="span3" >
-      <div class="row">
-        <div id="side-menu" data-spy="affix" data-offset-top="0">
-          <ul class="nav nav-list" >
-            <li class="nav-header">Welcome!</li>
-            <li><a href="#forward">Foreword</a></li>
-            <li><a href="#beta">Beta Participation</a></li>
-            <li class="divider"></li>
-            <li class="nav-header">Documentation</li>
-            <li><a href="#getting-started">Getting Started</a></li>
-            <li><a href="#orders">Accepting Orders</a></li>
-            <li><a href="#payments">Payments</a></li>
-            <li><a href="#tickets">Tickets & Admission</a></li>
-            <li class="divider"></li>
-            <li class="nav-header">Information </li>
-            <li><a href="#tos">Terms of Service</a></li>
-            <li><a href="#privacy">Privacy Policy</a></li>
-            <li class="divider"></li>
-          </ul>
-        </div>
-      </div>
-    </div> <!-- /span3 -->
-    <div class="span9" id="info-page-content">
+    <div class="span12" id="info-page-content">
       <div class="row">
         <div class="span12">
           <h3 id="forward">
@@ -74,131 +52,6 @@
       <hr class="fancy-hr">
       <div class="row">
         <div class="span12">
-          <h3 id="beta">
-            <i class="icon-beaker"></i>Beta Participation <br>
-            <small>Anyone can try out 100 Motels and have a look around but if you intend to use it during beta for your tour, read this first... </small>
-          </h3>
-          <div class="alert">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong><small><i class="icon-asterisk"></i></small> Contact support to activate payments!</strong> This is only a temporary control measure. Thanks for your patience.
-          </div>
-          <p><a href="https://stripe.com" class="stripe-connect light-blue dark"><span>stripe payments</span></a></p>
-          <p>
-            <strong>100 Motels is a 'Stripe App'</strong> meaning there is only a full service in the countries Stripe support, currently the US and Canada.
-          </p>
-          <p> You can run events and charge credit cards in any country but in order to receive money you need a USD or CAD bank account.</p>
-          <p>
-            The good news is Stripe recently started a UK beta with Europe to follow.
-          </p>
-          <h4><span class="label label-info">Event Limits</span></h4>
-          <ul class="icons">
-            <li><i class=" icon-exclamation-sign"></i> Max Capacity is 200 persons per event.</li>
-            <li><i class=" icon-exclamation-sign"></i> Ticket Price must be in the $10 to $20 dollar range.</li>
-            <li><i class=" icon-exclamation-sign"></i> While you can create as many events as you want, payments can only be active for one of your events at a time.</li>
-          </ul>
-          <p>These are temporary constraints while I continue to develop and test the app.</p>
-        </div>
-      </div>
-      <hr class="fancy-hr">
-      <div class="row">
-        <div class="span12">
-          <h3 id="getting-started">
-            <i class=""></i> Getting Started with 100 Motels <br>
-            <small>If you need help or have a question at any time, don't hesitate to contact support. </small>
-          </h3><br>
-          <h4>Try it Free</h4>
-          <p> If you click on <a href class="btn btn-small btn-success">Try it free</a> an event and an account are created for you which can be optionally saved. If you browse away from 100 Motels they are automatically discarded.</p><br>
-          <h4>Your Event</h4>
-          <p> Your first event is automatically populated with placeholder information. You can easily change it by editing your event on the page or in a form. </p>
-          <p>
-            Clicking on or near an <i class="icon-edit"></i> edit icon activates the edit input which you'll see surrounded by a blue highlight. To save your changes just click anywhere outside the input, the page should update automatically. To cancel your edit press the escape button.
-          </p>
-          <p>Alternatively you can edit all fields in a form. You can access the edit form via the <a href=""><i class="icon-cog"></i>event settings</a> menu at the top right of the page.</p><br>
-          <h4><i class="icon-edit"> </i> Editable fields</h4>
-          <span class="label">On the Page</span>
-          <dl class="">
-            <dt>Username presents</dt>
-            <dd>This can also be set from your user profile - a family or business-name to describe yourself.</dd>
-            <dt>A Title... </dt>
-            <dd> The main headline for your show, max 30 words.</dd>
-            <dt>Date</dt>
-            <dd>The date of your show. Note you can't change the date of an event if it has orders. To change the date of an active event, either cancel the orders or choose the <strong>reschedule option</strong>, available in your Event Admin area.</dd>
-            <dt>Who's performing...</dt>
-            <dd>You can list the artists here, max 70 words.</dd>
-            <dt>Ticket price</dt>
-            <dd>Must be between $10 and $20 dollars.</dd>
-            <dt>Read this...</dt>
-            <dd>A text area for biographical or other information regarding your event.</dd>
-            <dt>Venue</dt>
-            <dd>The name of the venue, e.g. "The Mounto Club"</dd>
-            <dt>Address</dt>
-            <dd>The exact street address, e.g "Mount St Lower, Dublin 2".</dd>
-            <dt>Doors</dt>
-            <dd>Input the time in 24 hour format.</dd>
-            <dt>Video field</dt>
-            <dd>Input a link (not the embed code) to a youtube or vimeo video. </dd>
-            <dt>Music</dt>
-            <dd>Input the link (not the embed code) to a soundcloud track or playlist.</dd>
-          </dl>
-          <span class="label">Edit form</span>
-          <dl>
-            <dt>Capacity</dt>
-            <dd>Sets the upper limit on how many tickets can be issued (you can take as many orders as you like)</dd>
-            <dt>Target</dt>
-            <dd>Sets the progress-bar indicator on the information section of your event.</dd>
-          </dl>
-          <span class="label">Background Image</span>
-          <br>
-          <p>Can be set via the edit form or <a href=""><i class="icon-cog"></i>event settings</a>. Take a picture, upload an image or pick from a third party service of your choosing.</p>
-          <span class="label">Event Visibility</span>
-          <br>
-          <p>By default your event is private <i class="icon-eye-close"> </i> meaning only the signed-in owner or other authorized users can view it. You can change the event to published <i class="icon-eye-open"> </i> in <a href=""><i class="icon-cog"></i>event settings</a>, the edit form or in the Event Admin area.</p>
-          <p> Please note that you cannot publish your event unless you have saved your user account and confirmed your email address.</p>
-        </div>
-      </div>
-      <hr class="fancy-hr">
-      <div class="row">
-        <div class="span12">
-          <h3 id="orders">
-            <i class=""></i> Accepting Orders <br>
-            <small>You can start accepting orders as soon as your event is created. </small>
-          </h3>
-          <p> Orders are processed <strong>free of charge</strong> and may be canceled at any time. An order gives you the right to charge a customer's card at any future date for the amount specified. </p>
-          <h4>The order form</h4>
-          <p>Visa and Mastercard credit and debit cards from all countries are supported, as are other US-only credit-cards. For a full list consult <a href="https://stripe.com/us/help/faq#card-types">Stripe's faq</a>.</p>
-          <p>When an order is created both you and your customer receive an email receipt which includes a unique order reference.</p>
-          <h4>Managing orders</h4>
-          <p>To view and manage your orders, go to your Event Admin area which is accessible via the <a href=""><i class="icon-cog"></i>event settings</a> menu. </p>
-          <p><small><i class="icon-camera-retro"></i><em> event admin</em></small></p>
-          <p><img src="https://s3-us-west-2.amazonaws.com/onehundredmotels/Motels+dash+screengrab.png" alt=""></p><br>
-          <p> Your event dashboard gives you up-to-date stats on how your event is doing, order filtering and search, a listing of authorized users and other useful options.</p>
-          <span class="label"><i class="icon-dashboard"></i> dashboard</span>
-          <p>A quick overview of useful information such as the current funding situation and event visibility.</p>
-          <span class="label"><i class="icon-user"></i> authorized users</span>
-          <p>
-            A listing of people with various degrees of access to administrator functions:
-            <ul>
-              <li>admin - read and write access, receives payments.</li>
-              <li>Event Admin - read and write access.</li>
-              <li>Editor - can edit but with restrictions (cannot access payments)</li>
-              <li>Reader - read only access to admin area.</li>
-            </ul>
-          </p>
-          <span class="label"><i class="icon-search"></i>order search</span>
-          <p>Search by event details (e.g. artist or venue), order name, email, order reference or ticket number.</p>
-          <span class="label"><i class="icon-list"></i> event options</span>
-          <ul>
-            <li>View, publish, edit your event or create a new one.</li>
-            <li>Create pdfs for orders or tickets.</li>
-            <li>The check-in view can be used to manage admissions to the event.</li>
-          </ul>
-          <span class="label"><i class="icon-filter"></i> filter orders</span>
-          <p>By default the window view lists all orders, you can filter the list by order state using the provided controls. This becomes more useful when you're working with payments. </p>
-        </div>
-      </div>
-      <hr class="fancy-hr">
-      <div class="row">
-        <div class="span12">
           <h3 id="payments">
             <i class=""></i> Payments <br>
             <small>To accept payments for events on 100 Motels you must register with <a href="https://stripe.com">Stripe</a>. </small>
@@ -207,34 +60,6 @@
           <p>The first step to setting up payments for your event is connecting your 100 Motels account to a Stripe account. </p>
           <p>In the <i class="icon-user"></i> user menu click on 'your account' and then <a href="/auth/stripe_connect" class="stripe-connect dark"><span>Connect with Stripe</span></a> </p>
           <p>The browser will open a Stripe sign-up or sign-in form. Once you've successfully connected you'll notice your user profile has changed to show <a href="#" class="stripe-connect light-blue dark"><span>Connected to Stripe <i class="icon-ok"></i></span></a></p><br>
-          <h4>Activate Payments</h4>
-          <div class="alert">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong><small><i class="icon-asterisk"></i></small> Contact support to activate payments!</strong> This is only a temporary control measure. Again, thanks for your patience.
-          </div>
-          <p><small><i class="icon-camera-retro"></i><em> charge options</em></small></p>
-          <p><img src="https://s3-us-west-2.amazonaws.com/onehundredmotels/Motels+admin+Admin.png" alt=""></p><br>
-          <h4>Charge Options</h4>
-          <p>When you next access your Event Admin, you'll notice a new options pane has appeared- 'Charge Options' <i class="icon-asterisk"></i> - this means you have successfully activated payments for your event.</p>
-          <dl>
-            <dt>Unlock</dt>
-            <dd>To ensure all the event stakeholders (e.g. Artists, admins) are in agreement, each authorized admin user has a payment lock which is on by default. Payments will only be processed if <strong>all the locks are off</strong>. If this is the case you'll see <span class="label label-success"><i class="icon-unlock"></i> Payments unlocked!</span> showing on the dashboard. </dd><br>
-            <dd>
-              <p><small><i class="icon-camera-retro"></i><em> the user list shows a locked or unlocked icon for each admin.</em></small></p>
-              <p><img src="https://s3-us-west-2.amazonaws.com/onehundredmotels/foo%40bar.png" alt=""></p><br>
-            </dd>
-            <dt><em>Please note all the following operations are processed in the background, you will be notified by email upon completion.</em></dt><br>
-            <dt>Charge All</dt>
-            <dd>By clicking charge all you will attempt to process all outstanding orders (marked as 'pending'), as well as any previously failed orders ('failed'). Customers receive an email with their ticket and details of the charge. </dd>
-            <dt>Charge Selected</dt>
-            <dd>As above but only for a selection. Note if you accidentally select 'paid' or 'refunded' orders, they <strong>won't be charged twice</strong> but will be silently ignored.</dd>
-            <dt>Refund Selected</dt>
-            <dd>Refund selected 'paid' items only. Note that tickets associated with the refunded orders will still be valid, you need to cancel the order if you want to invalidate the tickets. Customers are notified by email.</dd>
-            <dt>Cancel Selected</dt>
-            <dd>Refunds payments if applicable and then cancels the order, invalidating the tickets also. Customers are notified by email.</dd>
-            <dt>Cancel Event</dt>
-            <dd>Cancels all orders, refunds all payments, invalidates all tickets. Customers are notified by email.</dd>
-          </dl><br>
           <h4>Failed Payments</h4>
           <p>Although an order gives you the right to charge a customer's card at some time in the future, it doesn't guarantee funds will be available at that time.</p>
           <p>Therefore in the event that a customer doesn't have sufficient funds to pay for their order, the charge will be marked as failed. When a charge fails both the customer and event admin receive email notifications.</p>
@@ -249,22 +74,6 @@
           <h4>Refunds</h4>
           <p>Your customer will be credited with the full price of their refunded order, i.e. the ticket price + fees.</p>
           <p>There is no extra charge to the admin for processing refunds. The cost of refunded fees is borne by Stripe and 100 Motels.</p>
-        </div>
-      </div>
-      <hr class="fancy-hr">
-      <div class="row">
-        <div class="span12">
-          <h3 id="tickets">
-            <i class=""></i> Tickets and Admissions <br>
-            <small> </small>
-          </h3><br>
-          <h4>Tickets</h4>
-          <p>Tickets are emailed to your customers when payment is confirmed</p>
-          <p><i class="icon-qrcode"></i> A ticket comprises of a QR code, and a ticket number unique to each event. </p><br>
-          <h4>Admissions</h4>
-          <p>You can download a pdf listing of Tickets or use the check-in view to handle admissions at your event.</p>
-          <p>Using the check-in view, input the six-digit ticket number. This will return a response to admit or deny entry with details of the original order displayed to verify the admission.</p>
-          <p><i class="icon-mobile-phone"></i> <i class="icon-tablet"></i> QR code reading applications for Iphone and Ipad are currently in development, with other platforms to follow.</p>
         </div>
       </div>
       <hr class="fancy-hr">
