--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group">
           <div class="col-lg-offset-2 col-lg-6">
-            <button type="submit" class="btn btn-default">Update Account</button>
+            <button type="submit" class="btn btn-default btn-block">Update Account</button>
           </div>
         </div>
       </form>
@@ -38,41 +38,44 @@
   <div class="row">
     <div class="col-lg-12">
       <h3 class="page-header">Events</h3>
-      <table class="table table-bordered text-center">
-        <tbody>
-          <% @user.events.each do |e| %>
-          <tr>
-            <td><%= link_to e.name, e %></td>
-            <td><%= e.location %></td>
-            <td>
-               <div class="progress">
-                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                   <span class="">60% Complete</span>
+      <div class="table-responsive">
+        <table class="table table-bordered table-condensed text-center">
+          <tbody>
+            <% @user.events.each do |e| %>
+            <tr>
+              <td><%= link_to e.name, e %></td>
+              <td><%= e.location %></td>
+              <td>
+                 <div class="progress">
+                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                     <span class="">60% Complete</span>
+                   </div>
                  </div>
-               </div>
-            </td>
-            <td>
-              <div class="btn-group">
-                <button type="button" class="btn btn-default">Cash $1000</button>
-                <button type="button" class="btn btn-default">Defer (3 days left)</button>
-                <button type="button" class="btn btn-default">Cancel Event</button>
-              </div>
-            </td>
-            <td>
-              <div class="btn-group">
-                <button type="button" class="btn btn-default">Message 100 Customers</button>
-                <button type="button" class="btn btn-default">Hide Event</button>
-              </div>
-            </td>
-            <td>
-              <div class="btn-group">
-                <%= link_to raw("Order List  <i class='icon-double-angle-right pull'></i>"), admin_event_path(@user.events.first), class: "btn btn-default" %>
-              </div>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+              </td>
+              <td>
+                <div class="btn-group">
+                  <button type="button" class="btn btn-default">Cash $1000</button>
+                  <button type="button" class="btn btn-default">Defer (3 days left)</button>
+                  <button type="button" class="btn btn-default">Cancel Event</button>
+                </div>
+              </td>
+              <td>
+                <div class="btn-group">
+                  <button type="button" class="btn btn-default">Message 100 Customers</button>
+                  <button type="button" class="btn btn-default">Hide Event</button>
+                </div>
+              </td>
+              <td>
+                <div class="btn-group">
+                  <button class="btn btn-default">Save PDF</button>
+                  <%= link_to raw("Order List"), admin_event_path(@user.events.first), class: "btn btn-default" %>
+                </div>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
