--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,20 +1,20 @@
 <div class="container">
-  <h1>Reset Password</h1>
-  <%= form_for @user, url: password_reset_path(params[:id]) do |f| %>
-    <% if @user.errors.any? %>
-      <div class="error_messages">
-        <h2>Form is invalid</h2>
-        <ul>
-          <% for message in @user.errors.full_messages %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-    <div class="field">
-      <%= f.label :password %>
-      <%= f.password_field :password %>
+  <div class="row">
+    <div class="col-lg-6 col-lg-offset-2">
+      <h3 class="page-header">Reset Password</h3>
+      <%= form_for @user, url: password_reset_path(params[:id]), html: {class: "form form-horizontal well", role: "form"} do |f| %>
+        <div class="form-group">
+          <%= f.label :password, nil, class: 'col-lg-2 control-label' %>
+          <div class="col-lg-10">
+            <%= f.password_field :password, class: "form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-lg-10 col-lg-offset-2">
+            <%= f.submit "Update Password", class: "btn btn-default" %>
+          </div>
+        </div>
+      <% end %>
     </div>
-    <div class="actions"><%= f.submit "Update Password" %></div>
-  <% end %>
+  </div>
 </div>
