--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,25 +6,31 @@
   </div>
   <div class="row">
     <div class="col-lg-6">
-      <form class="form-horizontal" role="form">
+      <%= form_for @user, html: {class: 'form form-horizontal', role: 'form'} do |f| %>
         <div class="form-group">
-          <label for="inputEmail1" class="col-lg-2 control-label">Email</label>
+          <%= f.label :name, class: "col-lg-2 control-label" %>
           <div class="col-lg-6">
-            <input type="email" class="form-control" id="inputEmail1" placeholder="<%= @user.email %>">
+            <%= f.text_field :name, class: "form-control", placeholder: @user.name %>
           </div>
         </div>
         <div class="form-group">
-          <label for="inputPassword1" class="col-lg-2 control-label">Name</label>
+          <%= f.label :email, class: "col-lg-2 control-label" %>
           <div class="col-lg-6">
-            <input type="text" class="form-control" id="inputPassword1" placeholder="<%= @user.name %>">
+            <%= f.email_field :email, class: "form-control", placeholder: @user.email %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= label_tag :confirm_password, "Confirm password", class: "col-lg-2 control-label" %>
+          <div class="col-lg-6">
+            <%= password_field_tag :confirm_password, nil, class: "form-control", placeholder: @user.password %>
           </div>
         </div>
         <div class="form-group">
           <div class="col-lg-offset-2 col-lg-6">
-            <button type="submit" class="btn btn-default btn-block">Update Account</button>
+            <button type="submit" class="btn btn-primary btn-block">Update Account</button>
           </div>
         </div>
-      </form>
+      <% end %>
     </div>
     <div class="col-lg-3 col-lg-offset-1">
       <% if current_user.api_key %>
