added public event helper, wonder why it wouldn't let me use event in the namespacE

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,7 @@
           <tbody>
             <% @user.events.each do |e| %>
             <tr>
-              <td><%= link_to e.name, e %></td>
+              <td><%= link_to e.name, public_event_path(e.id) %></td>
               <td><%= e.location %></td>
               <td>
                  <div class="progress">
