--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
               <% end %>
               <!-- <li class="divider-vertical"></li> -->
               <% if current_user %>
-                <li><%= link_to "Admin", user_path(current_user) %></li>
+                <li><%= link_to(current_user.guest? ? "Save your account" : "Admin", user_path(current_user)) %></li>
                 <li><%= link_to "Sign out", logout_path %></li>
               <% end %>
             </ul>
@@ -67,7 +67,7 @@
           <li><%= link_to "Terms of Service", info_path %></li>
           <li><%= link_to "Legal and Privacy", info_path %></li>
           <li><%= link_to "Info and Help", info_path %></li>
-          <li><%= link_to "Sign Up", signup_path unless current_user %></li>
+          <li><%= link_to "Sign Up", signup_path %></li>
           <li><a href="http://blog.100motels.com">Blog</a></li>
         </ul>
       </div>
