--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,39 +6,45 @@
   </div>
   <div class="row">
     <div class="col-lg-6">
-      <%= form_for @user, html: {class: 'form form-horizontal', role: 'form'} do |f| %>
-        <div class="form-group">
-          <%= f.label :name, class: "col-lg-2 control-label" %>
-          <div class="col-lg-6">
-            <%= f.text_field :name, class: "form-control", placeholder: @user.name %>
+      <% if current_user.guest %>
+        <%= render 'form' %>
+      <% else %>
+        <%= form_for current_user, method: :patch, html: {class: 'form form-horizontal', role: 'form'} do |f| %>
+          <div class="form-group">
+            <%= f.label :name, class: "col-lg-2 control-label" %>
+            <div class="col-lg-6">
+              <%= f.text_field :name, class: "form-control", placeholder: @user.name %>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <%= f.label :email, class: "col-lg-2 control-label" %>
-          <div class="col-lg-6">
-            <%= f.email_field :email, class: "form-control", placeholder: @user.email %>
+          <div class="form-group">
+            <%= f.label :email, class: "col-lg-2 control-label" %>
+            <div class="col-lg-6">
+              <%= f.email_field :email, class: "form-control", placeholder: @user.email %>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <%= label_tag :confirm_password, "Confirm password", class: "col-lg-2 control-label" %>
-          <div class="col-lg-6">
-            <%= password_field_tag :confirm_password, nil, class: "form-control", placeholder: @user.password %>
+          <div class="form-group">
+            <%= label_tag :confirm_password, "Confirm password", class: "col-lg-2 control-label" %>
+            <div class="col-lg-6">
+              <%= password_field_tag :confirm_password, nil, class: "form-control", placeholder: @user.password %>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <div class="col-lg-offset-2 col-lg-6">
-            <button type="submit" class="btn btn-primary btn-block">Update Account</button>
+          <div class="form-group">
+            <div class="col-lg-offset-2 col-lg-6">
+              <button type="submit" class="btn btn-primary btn-block">Update Account</button>
+            </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
     </div>
     <div class="col-lg-3 col-lg-offset-1">
-      <% if current_user.api_key %>
-        <button type="button" class="btn btn-block btn-success"><span>Connected to Stripe <i class="icon-ok"></i></span></button>
-      <% else %>
-        <a href="/auth/stripe_connect" class="btn btn-block btn-default"><span>Connect with Stripe <i class="icon-credit-card"></i></span></a>
-      <% end %><br>
-      <%= link_to "Reset Password", password_resets_path(email: current_user.email), method: :post, class: "btn btn-block btn-info" %>
+      <% unless current_user.guest %>
+        <% if current_user.api_key %>
+          <button type="button" class="btn btn-block btn-success"><span>Connected to Stripe <i class="icon-ok"></i></span></button>
+        <% else %>
+          <a href="/auth/stripe_connect" class="btn btn-block btn-default"><span>Connect with Stripe <i class="icon-credit-card"></i></span></a>
+        <% end %><br>
+        <%= link_to "Reset Password", password_resets_path(email: current_user.email), method: :post, class: "btn btn-block btn-info" %>
+      <% end %>
     </div>
   </div>
   <div class="row">
@@ -47,7 +53,7 @@
       <div class="table-responsive">
         <table class="table table-bordered table-condensed text-center">
           <tbody>
-            <% @user.events.each do |e| %>
+            <% current_user.events.each do |e| %>
             <tr>
               <td><%= link_to e.name, public_event_path(e.id) %></td>
               <td><%= e.location %></td>
@@ -74,7 +80,7 @@
               <td>
                 <div class="btn-group">
                   <button class="btn btn-default">Save PDF</button>
-                  <%= link_to raw("Order List"), admin_event_path(@user.events.first), class: "btn btn-default" %>
+                  <%= link_to raw("Order List"), admin_event_path(current_user.events.first), class: "btn btn-default" %>
                 </div>
               </td>
             </tr>
