stripe basically working again

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,7 +55,7 @@
           <tbody>
             <% current_user.events.each do |e| %>
             <tr>
-              <td><%= link_to e.name, public_event_path(e.id) %></td>
+              <td><%= link_to e.name, event_path(e.id) %></td>
               <td><%= e.location %></td>
               <td>
                  <div class="progress">
