--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
- <%= simple_form_for @order, :validate => true, :html => { :class => '' } do |f| %>
+ <%= form_for @order, :validate => true, :html => { :class => '' } do |f| %>
   <%= f.input :event_id, as: :hidden, input_html: { value: @event.id } %>
   <%= f.input :quantity, collection: 1..4, input_html: { class: "input-mini"}, label: false, include_blank: false %>
   <% unless current_user && current_user.guest? == false %>
