--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -51,22 +51,7 @@
 				</div>
 			</div>
 			<div class="col-lg-4">
-				<form class="form-inline" role="form">
-				  <div class="form-group">
-				    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-				    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
-				  </div>
-				  <div class="form-group">
-				    <select class="form-control" id="order_quantity">
-				      <option value="1">1 ticket </option>
-				      <option value="2">2 tickets</option>
-				      <option value="3">3 tickets</option>
-				      <option value="4">4 tickets</option>
-				      <option value="5">5 tickets</option>
-				    </select>
-				  </div>
-				  <button id="checkout" type="button" class="btn btn-primary">Purchase</button>
-				</form>
+        <%= render 'orders/form' %>
 			</div>
 			<div class="col-lg-2"><div class="price" data-price='<%= @event.ticket_price %>'><%= @event.order_total %></div=></div>
 		</div>
