--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,50 +43,43 @@
         <% else %>
           <a href="/auth/stripe_connect" class="btn btn-block btn-default"><span>Connect with Stripe <i class="icon-credit-card"></i></span></a>
         <% end %><br>
-        <%= link_to "Reset Password", password_resets_path(email: current_user.email), method: :post, class: "btn btn-block btn-info" %>
+        <%= link_to "Reset Password", password_resets_path(email: current_user.email), method: :post, class: "btn btn-block btn-info" %><br>
+        <%= link_to "Events Admin", admin_event_path(current_user.events.first), class: "btn btn-block btn-primary" %>
       <% end %>
     </div>
   </div>
   <div class="row">
     <div class="col-lg-12">
-      <h3 class="page-header">Events</h3>
-      <div class="table-responsive">
-        <table class="table table-bordered table-condensed text-center">
-          <tbody>
-            <% current_user.events.each do |e| %>
-            <tr>
-              <td><%= link_to e.name, event_path(e.id) %></td>
-              <td><%= e.location %></td>
-              <td>
-                 <div class="progress">
-                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                     <span class="">60% Complete</span>
-                   </div>
-                 </div>
-              </td>
-              <td>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default">Cash $1000</button>
-                  <button type="button" class="btn btn-default">Defer (3 days left)</button>
-                  <button type="button" class="btn btn-default">Cancel Event</button>
-                </div>
-              </td>
-              <td>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default">Message 100 Customers</button>
-                  <button type="button" class="btn btn-default">Hide Event</button>
-                </div>
-              </td>
-              <td>
-                <div class="btn-group">
-                  <button class="btn btn-default">Save PDF</button>
-                  <%= link_to raw("Order List"), admin_event_path(current_user.events.first), class: "btn btn-default" %>
-                </div>
-              </td>
-            </tr>
+      <h3 class="page-header">Events Summary
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-default">
+        <div class="panel body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>Event</th>
+                <th>State</th>
+                <th>Current Sales</th>
+                <th>Time</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+            <% current_user.events.each do |event| %>
+              <tr class="">
+                <td><%= link_to "#{event.name} in #{event.location}", event_path(event) %></td>
+                <td><span class="label label-success">visible</span></td>
+                <td><span class="badge"><%= number_to_currency(event.orders.sum(:total)) %></span> in cash | <span class="badge">15/100</span> tickets</td>
+                <td>3 weeks to go</td>
+                <td><%= link_to "admin", admin_event_path(event), class: "" %></td>
+              </tr>
             <% end %>
-          </tbody>
-        </table>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
