--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,16 +1,44 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <form class="form-inline" role="form">
-        <div class="form-group col-lg-12 pull-right">
-          <label class="sr-only" for="exampleInputEmail2"></label>
-          <input type="search" class="form-control input-lg" id="exampleInputEmail2" placeholder="Enter email">
-        </div>
-      </form>
+      <div class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown"><h3 class="page-header"><%= @event.name %> in <%= @event.location %> <b class="caret"></b></h3></a>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+          <% current_user.events.each do |event| %>
+            <li role="presentation"><%= link_to event.name, admin_event_path(event) %></li>
+          <% end %>
+        </ul>
+      </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-3">
+      <div class="list-group">
+        <li href="#" class="list-group-item">
+          <h4 class="list-group-item-heading">Time Left <span class="badge pull-right">3 months</span></h4>
+          <p class="list-group-item-text">Time running low? you have a few options. Send a group email to your customers, reschedule the event to a new date or cancel it.</p><br>
+          <button class="btn btn-info btn-block">Contact, Defer or Cancel</button>
+        </li>
+        <li href="#" class="list-group-item">
+          <h4 class="list-group-item-heading">Sales Orders <span class="badge pull-right">$1000</h4>
+          <p class="list-group-item-text">Cash in all your orders.</p><br>
+          <button class="btn btn-success btn-block">Charge all Orders</button>
+        </li>
+        <li href="#" class="list-group-item">
+          <h4 class="list-group-item-heading">Tickets <span class="badge pull-right">1000 tickets @ $10</span></h4>
+          <p class="list-group-item-text">Change the ticket price or sales target. Price changes don't affect exising orders.</p><br>
+          <button class="btn btn-block btn-default">Change Price or Target</button>
+        </li>
+      </div>
+    </div>
+    <div class="col-lg-9">
+      <div class="input-group">
+        <input type="search" class="form-control">
+        <div class="input-group-btn">
+          <button type="button" class="btn btn-info" tabindex="-1">Search Orders</button>
+          <button type="button" class="btn btn-default">Orders PDF</button>
+        </div>
+      </div>
       <table class="table table-striped table-bordered" id="admin-customers">
         <thead>
           <tr>
@@ -19,7 +47,7 @@
             <th>UUID</th>
             <th>Quantity</th>
             <th>Order Total</th>
-            <th>Status</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -27,15 +55,14 @@
           <tr>
             <td><%= order.name %> </td>
             <td><%= order.email %> </td>
-            <td><%= order.uuid %> </td>
+            <td><%= order.uuid.truncate(8) %> </td>
             <td><%= order.quantity %></td>
             <td><%= number_to_currency(order.total) %></td>
-            <td><span class="label"><%= order.stripe_event %></span></td>
+            <td><%= link_to "view", order_path(order) %></td>
           </tr>
           <% end %>
         </tbody>
       </table>
     </div>
   </div>
-  <%= will_paginate @orders %>
 </div>
