--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -16,29 +16,35 @@
       <div class="list-group">
         <li href="#" class="list-group-item">
           <h4 class="list-group-item-heading">Time Left <span class="badge pull-right">3 months</span></h4>
-          <p class="list-group-item-text">Time running low? you have a few options. Send a group email to your customers, reschedule the event to a new date or cancel it.</p><br>
-          <button class="btn btn-info btn-block">Contact, Defer or Cancel</button>
+          <p class="list-group-item-text">Send a group email to your customers optionally rescheduling or cancelling the event.</p><br>
+          <button class="btn btn-info btn-block">Notify Customers</button>
         </li>
         <li href="#" class="list-group-item">
           <h4 class="list-group-item-heading">Sales Orders <span class="badge pull-right">$1000</h4>
-          <p class="list-group-item-text">Cash in all your orders.</p><br>
-          <button class="btn btn-success btn-block">Charge all Orders</button>
+          <p class="list-group-item-text">Charge all unpaid sales orders.</p><br>
+          <button class="btn btn-success btn-block">Charge Customers</button>
         </li>
         <li href="#" class="list-group-item">
           <h4 class="list-group-item-heading">Tickets <span class="badge pull-right">1000 tickets @ $10</span></h4>
-          <p class="list-group-item-text">Change the ticket price or sales target. Price changes don't affect exising orders.</p><br>
+          <p class="list-group-item-text">Change the ticket price or sales target. Price changes don't affect existing orders.</p><br>
           <button class="btn btn-block btn-default">Change Price or Target</button>
+        </li>
+        <li href="#" class="list-group-item">
+          <h4 class="list-group-item-heading">Ticket Checking</h4>
+          <p class="list-group-item-text">A Mobile first view for Checking the tickets of attendees.</p><br>
+          <button class="btn btn-block btn-default">Switch to Ticket Checking</button>
         </li>
       </div>
     </div>
     <div class="col-lg-9">
       <div class="input-group">
-        <input type="search" class="form-control">
+        <input type="search" class="form-control input-lg">
         <div class="input-group-btn">
-          <button type="button" class="btn btn-info" tabindex="-1">Search Orders</button>
-          <button type="button" class="btn btn-default">Orders PDF</button>
+          <button type="button" class="btn btn-default btn-lg" tabindex="-1">Search Orders</button>
+          <button type="button" class="btn btn-default btn-lg">Orders PDF</button>
         </div>
       </div>
+      <br>
       <table class="table table-striped table-bordered" id="admin-customers">
         <thead>
           <tr>
