--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag events_path, method: :get, class: "" do %>
   <div class="input-append">
-    <%= text_field_tag :query, params[:query], class: "input-lg", placeholder: "Search artist, venue or location", id: "appendedInputButton" %>
+    <%= search_field_tag :query, params[:query], class: "input-lg", placeholder: "Search artist, venue or location", id: "appendedInputButton" %>
     <button type="submit" class="btn btn-lg" ><i class="icon-search"></i> Go</button>
   </div>
 <% end %>
