--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,20 +1,23 @@
 <div class="container">
 	<div class="row">
-		<div class="span12">
-      <div class="input-group">
-        <input type="search" class="form-control">
-        <div class="input-group-btn">
-          <button type="button" class="btn btn-default" tabindex="-1">Search</button>
-          <button type="button" class="btn btn-default">Reset</button>
+		<div class="col-lg-12">
+      <form>
+        <div class="input-group">
+          <input type="search" name="query" class="form-control input-lg" placeholder="<%= params[:query] %>">
+          <div class="input-group-btn">
+            <button type="submit" class="btn btn-default btn-lg" tabindex="-1" action='<%= events_path(query: params[:query]) %>'>Search</button>
+            <button type="submit" class="btn btn-default btn-lg" action="/events">Reset</button>
+          </div>
         </div>
-      </div>
+      </form>
     </div>
+  </div>
 	<hr>
 	<div class="row">
   <% @events.each do |event| %>
     <div class="col-md-4 portfolio-item">
       <%= link_to event_path(event) do %>
-        <%= filepicker_image_tag event.image, w: 400, h: 250, fit: 'crop' %>
+        <%= filepicker_image_tag event.image, w: 380, h: 200, fit: 'crop' %>
         <h3><%= event.name %></h3>
       <% end %>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
