--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -77,3 +77,10 @@ footer {
     @extend .alert-error;
     &:first-letter { text-transform: uppercase };
   }
+
+.block-button-group {
+  width: 100%;
+  .btn  {
+    width: 33%
+  }
+}
