--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-8 col-lg-offset-2 well">
-  <h3 class="page-header">New Event</h3>
-  <%= form_for @event, html: {class: 'form form-horizontal', role: 'form'} do |f| %>
+  <h3 class="page-header"><%= controller.action_name.capitalize %> Event</h3>
+  <%= form_for [:admin, @event], html: {class: 'form form-horizontal', role: 'form'} do |f| %>
   <div class="form-group">
   <%= f.label :name, class: "col-lg-2 control-label" %>
   <div class="col-lg-6">
