--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -37,13 +37,15 @@
       </div>
     </div>
     <div class="col-lg-9">
-      <div class="input-group">
-        <input type="search" class="form-control input-lg">
-        <div class="input-group-btn">
-          <button type="button" class="btn btn-default btn-lg" tabindex="-1">Search Orders</button>
-          <button type="button" class="btn btn-default btn-lg">Orders PDF</button>
+      <form>
+        <div class="input-group">
+          <input type="search" name="query" class="form-control input-lg" value="<%= params[:query] %>">
+          <div class="input-group-btn">
+            <button type="submit" class="btn btn-default btn-lg" action='<%= admin_event_path(@event, query: params[:query]) %>'>Search Orders</button>
+            <button type="button" class="btn btn-default btn-lg" action="admin_event_path(@event)">Orders PDF</button>
+          </div>
         </div>
-      </div>
+      </form>
       <br>
       <table class="table table-striped table-bordered" id="admin-customers">
         <thead>
