--- a/app/views/admin/messages/_form.html.erb
+++ b/app/views/admin/messages/_form.html.erb
@@ -1,26 +1,25 @@
 <div class="row">
   <div class="col-lg-8 col-lg-offset-2 well">
   <h3 class="page-header">Send Notification</h3>
-  <%= form_tag admin_event_messages_path, action: :create, class: "form-horizontal" do %>
+  <%= form_for [:admin, @event, @message], html: {class: "form-horizontal"} do |f| %>
   <div class="form-group">
-  <%= label_tag :date, "New date if rescheduling", class: "col-lg-3 control-label" %>
+  <%= f.label :date, "New date if rescheduling", class: "col-lg-3 control-label" %>
     <div class="col-lg-6">
-      <%= date_field_tag :date, nil, class: "form-control", placeholder: ""%>
+      <%= f.date_field :date, class: "form-control", placeholder: ""%>
     </div>
   </div>
   <div class="form-group">
-  <%= label_tag :message, "Message to customers", class: "col-lg-3 control-label" %>
+  <%= f.label :message, "Message to customers", class: "col-lg-3 control-label" %>
     <div class="col-lg-6">
-      <%= text_area_tag :message, nil, class: "form-control", placeholder: "", rows: "10" %>
+      <%= f.text_area :message, class: "form-control", placeholder: "", rows: "10" %>
     </div>
   </div>
-      <%= hidden_field_tag :event_id, @event.id %>
   <div class="form-group">
     <div class="col-lg-offset-3 col-lg-6">
       <div class="btn-group block-button-group">
-        <%= submit_tag "Message", class: "btn btn-info" %>
-        <%= submit_tag "Defer", class: "btn btn-warning" %>
-        <%= submit_tag "Cancel", class: "btn btn-danger" %>
+        <%= f.submit "Message", class: "btn btn-info" %>
+        <%= f.submit "Defer", name: "message[defer]", class: "btn btn-warning" %>
+        <%= f.submit "Cancel", class: "btn btn-danger" %>
       </div>
     </div>
   </div>
