--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,6 @@
                 <li><%= link_to "Sign up", signup_path %></li>
                 <li><%= link_to "Sign in", login_path %></li>
               <% end %>
-              <!-- <li class="divider-vertical"></li> -->
               <% if current_user %>
                 <li><%= link_to(current_user.guest? ? "Save your account" : "Admin", user_path(current_user)) %></li>
                 <li><%= link_to "Sign out", logout_path %></li>
@@ -48,12 +47,14 @@
         </div>
       </nav>
       <div>
+        <div class="container flash-messages">
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key == :notice ? "success" : "danger" %>">
             <a class="close" data-dismiss="alert">&#215;</a>
             <%= content_tag :div, value, :id => "flash_#{key}" if value.is_a?(String) %>
           </div> <!-- /flash -->
         <% end %>
+        </div>
         <%= yield %>
       </div> <!-- /content container -->
       <div class="push"></div>
