--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -22,7 +22,7 @@
         <li href="#" class="list-group-item">
           <h4 class="list-group-item-heading">Sales Orders <span class="badge pull-right">$1000</h4>
           <p class="list-group-item-text">Charge all unpaid sales orders.</p><br>
-          <button class="btn btn-success btn-block">Charge Customers</button>
+          <%= button_to "Charge Customers", charges_path(event_id: @event.id), class: "btn btn-success btn-block", method: :create %>
         </li>
         <li href="#" class="list-group-item">
           <h4 class="list-group-item-heading">Tickets <span class="badge pull-right">1000 tickets @ $10</span></h4>
