event defer working now

--- a/app/views/admin/messages/_form.html.erb
+++ b/app/views/admin/messages/_form.html.erb
@@ -17,9 +17,9 @@
   <div class="form-group">
     <div class="col-lg-offset-3 col-lg-6">
       <div class="btn-group block-button-group">
-        <%= f.submit "Message", class: "btn btn-info" %>
-        <%= f.submit "Defer", name: "message[defer]", class: "btn btn-warning" %>
-        <%= f.submit "Cancel", class: "btn btn-danger" %>
+        <%= f.submit "Message", name: "message[option]", class: "btn btn-info" %>
+        <%= f.submit "Defer", name: "message[option]", class: "btn btn-warning" %>
+        <%= f.submit "Cancel", name: "message[option]", class: "btn btn-danger" %>
       </div>
     </div>
   </div>
