need to rething cancellations process

--- a/app/views/order_mailer/event_deferred.text.erb
+++ b/app/views/order_mailer/event_deferred.text.erb
@@ -8,7 +8,7 @@ The <%= @event.user.name %> gave the following reason:
 
 If you wish, you can cancel your order now by visiting this link:
 
-<%#= cancel_orders_url todo like email reset controller%>
+<%#= cancel_orders_url todo like password reset controller%>
 
 Thanks!
 
