getting rid of old emails

--- a/app/views/notifier/group_message.text.erb
+++ b/app/views/notifier/group_message.text.erb
@@ -1,7 +1,5 @@
-Hi <%= @order.email %>
+Here's a message from <%= @event.user.name %> about your <%= @event.name %> in <%= @event.location %>
 
-Here's a message about your Event:
-
-<%= @message.content %>
+<%= @message.message %>
 
 100 Motels.
