can't seem to get bip working time for a different solution perhaps?

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -12,19 +12,33 @@ orderTotal = () ->
   $('.order-total').html(order_price.toFixed(2))
 
 
-# $('.best_in_place').bind "ajax:success", (event, data) ->
-#  $.ajax $(this).data(window.location.pathname),
-#   type: 'GET'
-#   dataType: 'html'
-#   error: (jqXHR, textStatus, errorThrown) ->
-#       console.log "AJAX Error: #{textStatus}"
-#   success: (data, textStatus, jqXHR) =>
-#     target = $(this).data('attribute')
-#     content = $(data).find(".#{target}").html()
-#     $(".#{target}").html content
-#     if target is 'address' then $(".location-city").html $(data).find(".location-city").html()
-#     orderTotal()
-#     $('#order_quantity').on "change", orderTotal
+$('.best_in_place').bind "ajax:success", (event, data) ->
+  alert "fuck year"
+ # $.ajax $(this).data(window.location.pathname),
+ #  type: 'GET'
+ #  dataType: 'html'
+ #  error: (jqXHR, textStatus, errorThrown) ->
+ #      console.log "AJAX Error: #{textStatus}"
+ #  success: (data, textStatus, jqXHR) =>
+ #    target = $(this).data('attribute')
+ #    content = $(data).find(".#{target}").html()
+ #    $(".#{target}").html content
+
+# @info = $("#info")
+
+# $.ajax(
+#   url: "/echo/json/"
+#   data:
+#     json: JSON.stringify(name: "someValue")
+
+#   type: "POST"
+# ).then((response) ->
+#   $info.text response.name
+# , ->
+#   $info.text "bad things happen to good developers"
+# ).always ->
+#   $info.append "...finally"
+
 
 $ ->
   $('.best_in_place').best_in_place()
@@ -46,11 +60,6 @@ $ ->
 
   $('.sold').css("width", "#{widthSold}%")
   $('.unsold').css("width", "#{widthUnsold}%")
-
-#  slimScroll for about piece in event show
-# $ ->
-#   $(".event-media-html").slimScroll
-#     height: '250px'
 
 $ ->
   $("#checkout").click ->
