--- a/app/views/admin/tickets/index.erb
+++ b/app/views/admin/tickets/index.erb
@@ -1,3 +1,47 @@
-<% @tickets.each do |t| %>
-  <%= t.number %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h3 class="page-header"><%= @event.name %> in <%= @event.location %></h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <form>
+        <div class="input-group">
+          <input type="search" name="query" class="form-control input-lg" value="<%= params[:query] %>">
+          <div class="input-group-btn">
+            <button type="submit" class="btn btn-default btn-lg" action='<%= admin_event_path(@event, query: params[:query]) %>'>Check</button>
+            <%= link_to "PDF", admin_event_path(@event, format: 'pdf'),  class: "btn btn-default btn-lg" %>
+          </div>
+        </div>
+      </form>
+      <br>
+      <table class="table table-striped table-bordered" id="admin-customers">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>CC</th>
+            <th>Quantity</th>
+            <th>Ticket</th>
+            <th>Checked?</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @tickets.each do |ticket| %>
+          <tr>
+            <td><%= ticket.order.name %> </td>
+            <td><%= ticket.order.email %> </td>
+            <td><%= ticket.order.last4 %> </td>
+            <td><%= ticket.order.quantity %></td>
+            <td><%= ticket.number %></td>
+            <td><span class="label label-info"><%= ticket.admitted ? time_tag(ticket.admitted) : "no" %></span></td>
+            <td><%= link_to "view", order_path(ticket.order) %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
