--- a/app/views/user_mailer/email_confirmation.text.erb
+++ b/app/views/user_mailer/email_confirmation.text.erb
@@ -2,5 +2,5 @@ Welcome to 100 Motels.
 
 Please confirm your email address by clicking the URL below.
 
-<%= confirm_email_confirmation_url(@member_profile.email_confirm_token) %>
+<%= confirm_email_confirmation_url(@user.email_confirm_token) %>
 
